--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ author:
 #   - label: "Website"
 #      icon: "fas fa-fw fa-link"
 #       url: "https://your-website.com"
-    - label: "Today_OZ"
+    - label: "Twitter"
        icon: "fab fa-fw fa-twitter-square"
         url: "https://twitter.com/Today_OZ"
     - label: "Facebook"
