--- a/_config.yml
+++ b/_config.yml
@@ -114,22 +114,22 @@ author:
   email            : "NeCoritol@gmail.com"
   links:
     - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: mailto:NeCoritol@gmail.com
+       icon: "fas fa-fw fa-envelope-square"
+        url: "mailto:NeCoritol@gmail.com"
 #   - label: "Website"
 #      icon: "fas fa-fw fa-link"
 #       url: "https://your-website.com"
-    - label: "Twitter"
+    - label: "Today_OZ"
        icon: "fab fa-fw fa-twitter-square"
         url: "https://twitter.com/Today_OZ"
     - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
+       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "GitHub"
-      icon: "fab fa-fw fa-github"
+       icon: "fab fa-fw fa-github"
       # url: "https://github.com/"
     - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
+       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
 
 # Site Footer
